<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MS Savings Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="action_send">Send</string>
    <string name="action_reset">Reset</string>
    <string name="load_quote_dialog_title">Restore saved quote?</string>
    <string name="load_quote_dialog_row_remove">Remove Quote</string>
    <string name="pref_title">Settings</string>
    <string name="pref_key_branding">Branding</string>
    <string name="pref_branding_icon">Icon</string>
    <string name="pref_branding_icon_summ">A branded icon to display in the heading bar</string>
    <string name="pref_branding_heading">Heading</string>
    <string name="pref_branding_heading_summ">Heading text to display as default</string>
    <string name="pref_branding_vendor_name">Vendor</string>
    <string name="pref_branding_vendor_name_summ">Name displayed on quote screen</string>
    <string name="pref_key_share">Sharing</string>
    <string name="pref_share_recipient">Recipient</string>
    <string name="pref_share_recipient_summ">The default recipient for shared Quotes</string>
    <string name="pref_share_cc">Copy (cc)</string>
    <string name="pref_share_cc_summ">The default cc for shared Quotes</string>
    <string name="pref_share_bcc">Blind Copy (bcc)</string>
    <string name="pref_share_bcc_summ">The default bcc for shared Quotes</string>
    <string name="pref_key_quote">Quote</string>
    <string name="pref_quote_default">Default</string>
    <string name="pref_quote_default_summ">The default quote loaded on startup</string>
    <string name="contact_lookup">...</string>
    <string name="preference_contact_title">Contact Lookup</string>

</resources>