<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <PreferenceCategory
            android:key="pref_key_branding"
            android:title="@string/pref_key_branding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!--<EditTextPreference-->
                <!--android:key="pref_branding_icon"-->
                <!--android:summary="@string/pref_branding_icon_summ"-->
                <!--android:title="@string/pref_branding_icon"-->
                <!--android:layout_width="match_parent"/>-->

        <EditTextPreference
                android:key="pref_branding_vendor_name"
                android:summary="@string/pref_branding_vendor_name_summ"
                android:title="@string/pref_branding_vendor_name"/>

        <!-- <EditTextPreference -->
        <!-- android:key="pref_branding_heading" -->
        <!-- android:summary="@string/pref_branding_heading_summ" -->
        <!-- android:title="@string/pref_branding_heading" /> -->
    </PreferenceCategory>

    <PreferenceCategory
            android:key="pref_key_share"
            android:title="@string/pref_key_share">

        <EditTextPreference
                android:key="pref_share_recipient"
                android:summary="@string/pref_share_recipient_summ"
                android:title="@string/pref_share_recipient"
                android:defaultValue=""/>

        <EditTextPreference
                android:key="pref_share_cc"
                android:summary="@string/pref_share_cc_summ"
                android:title="@string/pref_share_cc"
                android:defaultValue=""/>

        <EditTextPreference
                android:key="pref_share_bcc"
                android:summary="@string/pref_share_bcc_summ"
                android:title="@string/pref_share_bcc"
                android:defaultValue=""/>
    </PreferenceCategory>

    <!--<PreferenceCategory-->
            <!--android:key="pref_key_quote"-->
            <!--android:title="@string/pref_key_quote">-->

        <!--<EditTextPreference-->
                <!--android:key="pref_quote_default"-->
                <!--android:summary="@string/pref_quote_default_summ"-->
                <!--android:title="@string/pref_quote_default"/>-->
    <!--</PreferenceCategory>-->

</PreferenceScreen>